--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <p>This website is under construction.</p>
                 <p>ETA: January 2017</p>
             </div>
+            <div class="one-half column" style="margin-top: 25%">
+                <img src="images/you_tried.png" alt="you tried" style="width:500px;height:475px"></img>
+            </div>
         </div>
     </div>
 
