Testing through console logs

--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
                 <a class="button button-primary">This button might do something</a>
             </div>
             <div class="one-half column" style="margin-top: 5%">
-                <img src="images/you_tried.png" alt="you tried" style="width:500px;height:475px"></img>
+                <img src="images/you_tried.png" alt="you tried" style="width:250px;height:237px"></img>
             </div>
         </div>
     </div>
 
     <!-- SCRIPTS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+        console.log("jQuery loaded")
+    </script>
     <script src="js/index.js"></script>
 
     <!-- End Document
