Updated Nav Bar and added scrolling to happen

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
     <title>hi, i'm kevin</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Kevin Lim's Personal Website">
+    <meta name="author" content="Kevin Lim">
 
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -33,7 +33,14 @@
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container">
-        <div class="row">
+        <nav class="fixed-nav-bar">
+            <!-- Fixed navigation bar content -->
+            <div class="row">
+                <p>FIXED NAVIGATION BAR</p>
+            </div>
+        </nav>
+
+        <div class="row" style="margin-top: 10px">
             <div class="one-half column" style="margin-top: 5%">
                 <h1>Hi, I'm Kevin</h1>
                 <p>This website is under construction.</p>
@@ -45,13 +52,16 @@
                 <img src="images/you_tried.png" alt="you tried" style="width:250px;height:237px"></img>
             </div>
         </div>
+        <div class="row">
+            <div class="one-half column" style="margin-top: 5%">
+                <img src="images/kappa.png" alt="kappa"></img>
+            </div>
+        </div>
     </div>
 
     <!-- SCRIPTS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
-        console.log("jQuery loaded")
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/index.js"></script>
 
     <!-- End Document
