--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>hi, i'm kevin</title>
+    <title>Kevin Lim</title>
     <meta name="description" content="Welcome to my Website!">
     <meta name="author" content="Kevin Lim">
 
@@ -37,9 +37,8 @@
     
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class="container">
+    <!--<div class="container">
         <nav class="fixed-nav-bar">
-            <!-- Fixed navigation bar content -->
             <div class="row">
                 <p>FIXED NAVIGATION BAR</p>
             </div>
@@ -60,6 +59,48 @@
         <div class="row">
             <div class="one-half column" style="margin-top: 5%">
                 <img src="images/kappa.png" alt="kappa"></img>
+            </div>
+        </div>
+    </div>-->
+
+    <div class="section intro">
+        <div class="container">
+            <div class="row">
+                <div class="one-half column">
+                    <h1>Hi, I'm Kevin</h1>
+                    <p>This website is under construction.</p>
+                    <p>ETA: January 2017</p>
+                </div>
+                <div class="one-half column" style="margin-top: 5%">
+                    <img src="images/you_tried.png" alt="you tried" style="width:250px;height:237px"></img>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="section about_me">
+        <div class="container">
+            <div class="row">
+                <h1>About Me</h1>
+                <p>I do stuff</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section projects">
+        <div class="container">
+            <div class="row">
+                <h1>Projects</h1>
+                <p>I did stuff</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section made_by">
+        <div class="container">
+            <div class="row">
+                <h1>Made By:</h1>
+                <p>Kevin Lim</p>
             </div>
         </div>
     </div>
