Added anchor and attempt on jQuery SScrolling

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
     </div>-->
 
-    <div class="section intro">
+    <div id="intro" class="section intro">
         <div class="container">
             <div class="row">
                 <div class="one-half column">
@@ -75,10 +75,13 @@
                     <img src="images/you_tried.png" alt="you tried" style="width:250px;height:237px"></img>
                 </div>
             </div>
+            <div class"row">
+                <p><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></p>
+            </div>
         </div>
     </div>
 
-    <div class="section about_me">
+    <div id="me" class="section me">
         <div class="container">
             <div class="row">
                 <h1>About Me</h1>
@@ -87,7 +90,7 @@
         </div>
     </div>
 
-    <div class="section projects">
+    <div id="projects" class="section projects">
         <div class="container">
             <div class="row">
                 <h1>Projects</h1>
@@ -96,7 +99,7 @@
         </div>
     </div>
 
-    <div class="section made_by">
+    <div id="contact" class="section contact">
         <div class="container">
             <div class="row">
                 <h1>Made By:</h1>
