Test smooth scrolling using jQuery

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                 <h1>About Me</h1>
                 <p>I do stuff</p>
             </div>
+            <div class="row">
+                <div class="one-half column" style="margin-top: 5%">
+                    <img src="images/kappa.png" alt="kappa"></img>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -96,6 +101,11 @@
                 <h1>Projects</h1>
                 <p>I did stuff</p>
             </div>
+            <div class="row">
+                <div class="one-half column" style="margin-top: 5%">
+                    <img src="images/kappa.png" alt="kappa"></img>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -104,6 +114,11 @@
             <div class="row">
                 <h1>Made By:</h1>
                 <p>Kevin Lim</p>
+            </div>
+            <div class="row">
+                <div class="one-half column" style="margin-top: 5%">
+                    <img src="images/kappa.png" alt="kappa"></img>
+                </div>
             </div>
         </div>
     </div>
