Update to include Smooth Scrolling and fullscreen

--- a/index.html
+++ b/index.html
@@ -33,47 +33,16 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     
 </head>
-<body>
+<body style="background-color: #F5F5F5">
     
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <!--<div class="container">
-        <nav class="fixed-nav-bar">
+    <div id="intro" class="section intro page-fullscreen">
+        <div class="container">
             <div class="row">
-                <p>FIXED NAVIGATION BAR</p>
-            </div>
-        </nav>
-
-        <div class="row" style="margin-top: 10px">
-            <div class="one-half column" style="margin-top: 5%">
                 <h1>Hi, I'm Kevin</h1>
                 <p>This website is under construction.</p>
                 <p>ETA: January 2017</p>
-                <a class="button button-primary">This button does nothing</a>
-                <a class="button button-primary">This button might do something</a>
-            </div>
-            <div class="one-half column" style="margin-top: 5%">
-                <img src="images/you_tried.png" alt="you tried" style="width:250px;height:237px"></img>
-            </div>
-        </div>
-        <div class="row">
-            <div class="one-half column" style="margin-top: 5%">
-                <img src="images/kappa.png" alt="kappa"></img>
-            </div>
-        </div>
-    </div>-->
-
-    <div id="intro" class="section intro">
-        <div class="container">
-            <div class="row">
-                <div class="one-half column">
-                    <h1>Hi, I'm Kevin</h1>
-                    <p>This website is under construction.</p>
-                    <p>ETA: January 2017</p>
-                </div>
-                <div class="one-half column" style="margin-top: 5%">
-                    <img src="images/you_tried.png" alt="you tried" style="width:250px;height:237px"></img>
-                </div>
             </div>
             <div class"row">
                 <p><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></p>
@@ -87,10 +56,8 @@
                 <h1>About Me</h1>
                 <p>I do stuff</p>
             </div>
-            <div class="row">
-                <div class="one-half column" style="margin-top: 5%">
-                    <img src="images/kappa.png" alt="kappa"></img>
-                </div>
+            <div class"row">
+                <p><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></p>
             </div>
         </div>
     </div>
@@ -101,10 +68,8 @@
                 <h1>Projects</h1>
                 <p>I did stuff</p>
             </div>
-            <div class="row">
-                <div class="one-half column" style="margin-top: 5%">
-                    <img src="images/kappa.png" alt="kappa"></img>
-                </div>
+            <div class"row">
+                <p><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></p>
             </div>
         </div>
     </div>
@@ -112,13 +77,11 @@
     <div id="contact" class="section contact">
         <div class="container">
             <div class="row">
-                <h1>Made By:</h1>
+                <h1>Contact Me @:</h1>
                 <p>Kevin Lim</p>
             </div>
-            <div class="row">
-                <div class="one-half column" style="margin-top: 5%">
-                    <img src="images/kappa.png" alt="kappa"></img>
-                </div>
+            <div class"row">
+                <p><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></p>
             </div>
         </div>
     </div>
