Changed Message Size and Aligns

--- a/index.html
+++ b/index.html
@@ -37,27 +37,33 @@
     
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div id="intro" class="section intro page-fullscreen">
+    <div class="section header page-fullscreen">
         <div class="container">
             <div class="row">
                 <h1>Hi, I'm Kevin</h1>
-                <p>This website is under construction.</p>
-                <p>ETA: January 2017</p>
+                <h5>This website is under construction.</h5>
+                <h5>ETA: January 2017</h5>
             </div>
-            <div class"row">
-                <p><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></p>
+            <div class"row page-links">
+                <h6><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></h6>
             </div>
         </div>
     </div>
 
-    <div id="me" class="section me">
+    <div id="me" class="section">
         <div class="container">
             <div class="row">
-                <h1>About Me</h1>
-                <p>I do stuff</p>
+                <div class="two-thirds column me-description">
+                    <h4>About Me</h4>
+                    <h6>I do stuff like coding, for instance</h6>
+                </div>
+                <div class="one-third column me-skills">
+                    <h5>Education</h5>
+                    <h6>UCSD B.S. Computer Engineering</h6>
+                </div>
             </div>
-            <div class"row">
-                <p><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></p>
+            <div class"row page-links">
+                <h6><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></h6>
             </div>
         </div>
     </div>
@@ -68,8 +74,8 @@
                 <h1>Projects</h1>
                 <p>I did stuff</p>
             </div>
-            <div class"row">
-                <p><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></p>
+            <div class"row page-links">
+                <h6><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></h6>
             </div>
         </div>
     </div>
@@ -78,10 +84,10 @@
         <div class="container">
             <div class="row">
                 <h1>Contact Me @:</h1>
-                <p>Kevin Lim</p>
+                <h6>Kevin Lim</h6>
             </div>
-            <div class"row">
-                <p><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></p>
+            <div class"row page-links">
+                <h6><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></h6>
             </div>
         </div>
     </div>
