More HTML and CSS added

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
     <!-- Font
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Open+Sans" rel="stylesheet">
 
     <!-- CSS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css">
@@ -33,61 +33,63 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     
 </head>
-<body style="background-color: #F5F5F5">
+<body>
     
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="section header page-fullscreen">
         <div class="container">
             <div class="row">
-                <h1>Hi, I'm Kevin</h1>
-                <h5>This website is under construction.</h5>
-                <h5>ETA: January 2017</h5>
+                <h1>Kevin Lim</h1>
+                <p>This website is under construction.</p>
+                <p>ETA: January 2017</p>
             </div>
             <div class"row page-links">
-                <h6><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></h6>
+                <h6><a href="#me">About Me</a> / <a href="#projects">Projects</a> / <a href="#contact">Contact Me</a></h6>
             </div>
         </div>
     </div>
 
-    <div id="me" class="section">
-        <div class="container">
+    <div class="container">
+        <div id="me" class="section">
             <div class="row">
-                <div class="two-thirds column me-description">
-                    <h4>About Me</h4>
-                    <h6>I do stuff like coding, for instance</h6>
+                <div class="two-thirds column me-about">
+                    <h3 style="font-style: italic; margin-bottom: 0;">About Me</h3>
+                    <p>I do stuff like coding, for instance. It takes a lot out of me to do stuff like this. Coding this website was a pain, but it was worth it in the end. I got to see how HTML works.</p>
                 </div>
                 <div class="one-third column me-skills">
-                    <h5>Education</h5>
-                    <h6>UCSD B.S. Computer Engineering</h6>
+                    <h7>Education</h7>
+                    <p>University of California, San Diego</p>
+                    <h7>Degree</h7>
+                    <p>Computer Engineering, B.S.</p>
+                    <h7>Hometown</h7>
+                    <p>La Mirada, CA</p>
+                    <h7>Experience In</h7>
+                    <p>Java, C, C++<br>HTML, CSS<br>JavaScript, jQuery<br>nodeJS</p>
                 </div>
             </div>
-            <div class"row page-links">
-                <h6><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></h6>
-            </div>
         </div>
+        <hr>
     </div>
 
-    <div id="projects" class="section projects">
-        <div class="container">
+    <div class="container">
+        <div id="projects" class="section projects">
             <div class="row">
                 <h1>Projects</h1>
                 <p>I did stuff</p>
             </div>
-            <div class"row page-links">
-                <h6><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></h6>
-            </div>
         </div>
+        <hr>
     </div>
 
-    <div id="contact" class="section contact">
-        <div class="container">
+    <div class="container">
+        <div id="contact" class="section contact">
             <div class="row">
-                <h1>Contact Me @:</h1>
-                <h6>Kevin Lim</h6>
-            </div>
-            <div class"row page-links">
-                <h6><a href="#me">About Me</a> | <a href="#projects">Projects</a> | <a href="#contact">Contact Me</a></h6>
+                <h1>Need to Contact Me?</h1>
+                <div class="two-thirds column">
+                    <h5 style="margin-bottom: 0">Email:</h5>
+                    <p><a href="mailto:knlim95@gmail.com">knlim95@gmail.com</a></p>
+                </div>
             </div>
         </div>
     </div>
