Added more information about myself

--- a/index.html
+++ b/index.html
@@ -38,15 +38,13 @@
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="section header page-fullscreen">
-        <div class="container">
-            <div class="row">
-                <h1>Kevin Lim</h1>
-                <p>This website is under construction.</p>
-                <p>ETA: January 2017</p>
-            </div>
-            <div class"row page-links">
-                <h6><a href="#me">About Me</a> / <a href="#projects">Projects</a> / <a href="#contact">Contact Me</a></h6>
-            </div>
+        <div class="row">
+            <h1>Kevin Lim</h1>
+            <p>This website is under construction.</p>
+            <p>ETA: January 2017</p>
+        </div>
+        <div class"row page-links">
+            <p><a href="#me">About Me</a> / <a href="#projects">Projects</a> / <a href="#contact">Contact Me</a></p>
         </div>
     </div>
 
@@ -54,8 +52,10 @@
         <div id="me" class="section">
             <div class="row">
                 <div class="two-thirds column me-about">
-                    <h3 style="font-style: italic; margin-bottom: 0;">About Me</h3>
-                    <p>I do stuff like coding, for instance. It takes a lot out of me to do stuff like this. Coding this website was a pain, but it was worth it in the end. I got to see how HTML works.</p>
+                    <h3 style="margin-bottom: 0;">About Me</h3>
+                    <p>I am currently studying Computer Engineering at University of California, San Diego.</p>
+                    <p>I am extremely interested in front-end software engineering and always looking to expand my skillset into different fields of software engineering.</p>
+                    <p>When I am not programming, I enjoy reading, gaming and hiking.</p>
                 </div>
                 <div class="one-third column me-skills">
                     <h7>Education</h7>
@@ -65,7 +65,7 @@
                     <h7>Hometown</h7>
                     <p>La Mirada, CA</p>
                     <h7>Experience In</h7>
-                    <p>Java, C, C++<br>HTML, CSS<br>JavaScript, jQuery<br>nodeJS</p>
+                    <p style="margin-bottom: 0;">Java, C, C++<br>HTML, CSS<br>JavaScript, jQuery<br>nodeJS</p>
                 </div>
             </div>
         </div>
@@ -86,9 +86,15 @@
         <div id="contact" class="section contact">
             <div class="row">
                 <h1>Need to Contact Me?</h1>
-                <div class="two-thirds column">
-                    <h5 style="margin-bottom: 0">Email:</h5>
+            </div>
+            <div class="row">
+                <div class="seven columns">
+                    <h5 style="margin-bottom: 0;">Email:</h5>
                     <p><a href="mailto:knlim95@gmail.com">knlim95@gmail.com</a></p>
+                </div>
+                <div class="five columns">
+                    <h5><a href="https://www.linkedin.com/in/kevin-lim-93a055122">LinkedIn</a></h5>
+                    <h5><a href="https://github.com/knlim95">Github</a></h5>
                 </div>
             </div>
         </div>
