Added support for new favicon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     
 </head>
 <body>
@@ -52,10 +53,13 @@
         <div id="me" class="section">
             <div class="row">
                 <div class="two-thirds column me-about">
-                    <h3 style="margin-bottom: 0;">About Me</h3>
+                    <h3 style="margin-bottom: 0">About Me</h3>
                     <p>I am currently studying Computer Engineering at University of California, San Diego.</p>
                     <p>I am extremely interested in front-end software engineering and always looking to expand my skillset into different fields of software engineering.</p>
                     <p>When I am not programming, I enjoy reading, gaming and hiking.</p>
+                    <h3 style="margin-bottom: 0">Work</h3>
+                    <p style="margin-bottom: 0">UCSD Student Affairs and Technology Services Helpdesk</p>
+                    <p style="margin-bottom: .5rem; font-style: italic">June 2015 - Present</p>
                 </div>
                 <div class="one-third column me-skills">
                     <h7>Education</h7>
