Fixed favicon not showing up

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
     
 </head>
 <body>
@@ -53,9 +53,9 @@
         <div id="me" class="section">
             <div class="row">
                 <div class="two-thirds column me-about">
-                    <h3 style="margin-bottom: 0">About Me</h3>
-                    <p>I am currently studying Computer Engineering at University of California, San Diego.</p>
-                    <p>I am extremely interested in front-end software engineering and always looking to expand my skillset into different fields of software engineering.</p>
+                    <h2 style="margin-bottom: 0">About Me</h2>
+                    <p style="margin-bottom: 1rem">I am currently studying Computer Engineering at University of California, San Diego.</p>
+                    <p style="margin-bottom: 1rem">I am extremely interested in front-end software engineering and always looking to expand my skillset into different fields of software engineering.</p>
                     <p>When I am not programming, I enjoy reading, gaming and hiking.</p>
                     <h3 style="margin-bottom: 0">Work</h3>
                     <p style="margin-bottom: 0">UCSD Student Affairs and Technology Services Helpdesk</p>
@@ -79,7 +79,7 @@
     <div class="container">
         <div id="projects" class="section projects">
             <div class="row">
-                <h3>Projects</h3>
+                <h2>Projects</h2>
                 <p>I did stuff</p>
             </div>
         </div>
@@ -89,16 +89,17 @@
     <div class="container">
         <div id="contact" class="section contact">
             <div class="row">
-                <h3>Need to Contact Me?</h3>
+                <h2>Need to Contact Me?</h2>
             </div>
             <div class="row">
-                <div class="seven columns">
-                    <h5 style="margin-bottom: 0;">Email:</h5>
-                    <p><a href="mailto:knlim95@gmail.com">knlim95@gmail.com</a></p>
+                <div class="six columns">
+                    <h4 style="margin-bottom: 0">Send me an email at:</h4>
+                    <h5 style="margin-bottom: 0"><a href="mailto:knlim95@gmail.com"><i class="icon-mail"></i>knlim95@gmail.com</a></h5>
                 </div>
-                <div class="five columns">
-                    <h5><a href="https://www.linkedin.com/in/kevin-lim-93a055122">LinkedIn</a></h5>
-                    <h5><a href="https://github.com/knlim95">Github</a></h5>
+                <div class="six columns">
+                    <h4 style="margin-bottom: 0">You can also find me at:</h4>
+                    <h5 style="margin-bottom: 0"><a href="https://www.linkedin.com/in/kevin-lim-93a055122"><i class="icon-linkedin"></i>LinkedIn</a></h5>
+                    <h5 style="margin-bottom: 0"><a href="https://github.com/knlim95"><i class="icon-github"></i>Github</a></h5>
                 </div>
             </div>
         </div>
