--- a/index.html
+++ b/index.html
@@ -38,71 +38,84 @@
     
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class="section header page-fullscreen">
+    <!--<div class="section header header-image page-fullscreen">
         <div class="row">
             <h1>Kevin Lim</h1>
             <p>This website is under construction.</p>
             <p>ETA: January 2017</p>
         </div>
-        <div class"row page-links">
+        <div class="row page-links">
             <p><a href="#me">About Me</a> / <a href="#projects">Projects</a> / <a href="#contact">Contact Me</a></p>
         </div>
-    </div>
+    </div>-->
 
-    <div class="container">
-        <div id="me" class="section">
-            <div class="row">
-                <div class="two-thirds column me-about">
-                    <h2 style="margin-bottom: 0">About Me</h2>
-                    <p style="margin-bottom: 1rem">I am currently studying Computer Engineering at University of California, San Diego.</p>
-                    <p style="margin-bottom: 1rem">I am extremely interested in front-end software engineering and always looking to expand my skillset into different fields of software engineering.</p>
-                    <p>When I am not programming, I enjoy reading, gaming and hiking.</p>
-                    <h3 style="margin-bottom: 0">Work</h3>
-                    <p style="margin-bottom: 0">UCSD Student Affairs and Technology Services Helpdesk</p>
-                    <p style="margin-bottom: .5rem; font-style: italic">June 2015 - Present</p>
-                </div>
-                <div class="one-third column me-skills">
-                    <h7>Education</h7>
-                    <p>University of California, San Diego</p>
-                    <h7>Degree</h7>
-                    <p>Computer Engineering, B.S.</p>
-                    <h7>Hometown</h7>
-                    <p>La Mirada, CA</p>
-                    <h7>Experience In</h7>
-                    <p style="margin-bottom: 0;">Java, C, C++<br>HTML, CSS<br>JavaScript, jQuery<br>nodeJS</p>
-                </div>
+    <div id="header" class="header">
+        <div class="header-image"></div>
+        <div class="header-wrapper">
+            <div class="header-text">Kevin Lim</div>
+            <div class="header-text-2">
+                <p>student and developer</p>
             </div>
         </div>
-        <hr>
+        <div class="header-link">
+            <p><a href="#me">About Me</a> / <a href="#projects">Projects</a> / <a href="#contact">Contact Me</a><p>
+        </div>
     </div>
 
-    <div class="container">
-        <div id="projects" class="section projects">
-            <div class="row">
-                <h2>Projects</h2>
-                <p>I did stuff</p>
+    <div class="page-body">
+        <div class="container">
+            <div id="me" class="section">
+                <div class="row">
+                    <div class="two-thirds column me-about">
+                        <h2 style="margin-bottom: 0">About Me</h2>
+                        <p style="margin-bottom: 1rem">I am currently studying Computer Engineering at University of California, San Diego.</p>
+                        <p style="margin-bottom: 1rem">I am extremely interested in front-end software engineering and always looking to expand my skillset into different fields of software engineering.</p>
+                        <p>When I am not programming, I enjoy reading, gaming and hiking.</p>
+                        <h3 style="margin-bottom: 0">Work</h3>
+                        <p style="margin-bottom: 0">UCSD Student Affairs and Technology Services Helpdesk</p>
+                        <p style="margin-bottom: .5rem; font-style: italic">June 2015 - Present</p>
+                    </div>
+                    <div class="one-third column me-skills">
+                        <h7>Education</h7>
+                        <p>University of California, San Diego</p>
+                        <h7>Degree</h7>
+                        <p>Computer Engineering, B.S.</p>
+                        <h7>Hometown</h7>
+                        <p>La Mirada, CA</p>
+                        <h7>Experience In</h7>
+                        <p style="margin-bottom: 0;">Java, C, C++<br>HTML, CSS<br>JavaScript, jQuery<br>nodeJS</p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <hr>
-    </div>
 
-    <div class="container">
-        <div id="contact" class="section contact">
-            <div class="row">
-                <h2>Need to Contact Me?</h2>
-            </div>
-            <div class="row">
-                <div class="six columns">
-                    <h4 style="margin-bottom: 0">Send me an email at:</h4>
-                    <h5 style="margin-bottom: 0"><a href="mailto:knlim95@gmail.com"><i class="icon-mail"></i>knlim95@gmail.com</a></h5>
-                </div>
-                <div class="six columns">
-                    <h4 style="margin-bottom: 0">You can also find me at:</h4>
-                    <h5 style="margin-bottom: 0"><a href="https://www.linkedin.com/in/kevin-lim-93a055122"><i class="icon-linkedin"></i>LinkedIn</a></h5>
-                    <h5 style="margin-bottom: 0"><a href="https://github.com/knlim95"><i class="icon-github"></i>Github</a></h5>
+            <hr>
+
+            <div id="projects" class="section projects">
+                <div class="row">
+                    <h2>Projects</h2>
+                    <p>I did stuff</p>
                 </div>
             </div>
-        </div>
+
+            <hr>
+            
+            <div id="contact" class="section contact">
+                <div class="row">
+                    <h2>Need to Contact Me?</h2>
+                </div>
+                <div class="row">
+                    <div class="six columns">
+                        <h4 style="margin-bottom: 0">Send me an email at:</h4>
+                        <h5 style="margin-bottom: 0"><a href="mailto:knlim95@gmail.com"><i class="icon-mail"></i>knlim95@gmail.com</a></h5>
+                    </div>
+                    <div class="six columns">
+                        <h4 style="margin-bottom: 0">You can also find me at:</h4>
+                        <h5 style="margin-bottom: 0"><a href="https://www.linkedin.com/in/kevin-lim-93a055122"><i class="icon-linkedin"></i>LinkedIn</a></h5>
+                        <h5 style="margin-bottom: 0"><a href="https://github.com/knlim95"><i class="icon-github"></i>Github</a></h5>
+                    </div>
+                </div>
+            </div>
+        </div
     </div>
 
     <!-- Scripts
