FInished Contact Me section

--- a/index.html
+++ b/index.html
@@ -38,17 +38,6 @@
     
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <!--<div class="section header header-image page-fullscreen">
-        <div class="row">
-            <h1>Kevin Lim</h1>
-            <p>This website is under construction.</p>
-            <p>ETA: January 2017</p>
-        </div>
-        <div class="row page-links">
-            <p><a href="#me">About Me</a> / <a href="#projects">Projects</a> / <a href="#contact">Contact Me</a></p>
-        </div>
-    </div>-->
-
     <div id="header" class="header">
         <div class="header-image"></div>
         <div class="header-wrapper">
@@ -66,16 +55,16 @@
         <div class="container">
             <div id="me" class="section">
                 <div class="row">
-                    <div class="two-thirds column me-about">
-                        <h2 style="margin-bottom: 0">About Me</h2>
-                        <p style="margin-bottom: 1rem">I am currently studying Computer Engineering at University of California, San Diego.</p>
-                        <p style="margin-bottom: 1rem">I am extremely interested in front-end software engineering and always looking to expand my skillset into different fields of software engineering.</p>
+                    <div class="two-thirds column" style="text-align: left">
+                        <h3 style="margin-bottom: 0">About Me</h3>
+                        <p>I am currently studying Computer Engineering at University of California, San Diego.</p>
+                        <p>I am extremely interested in front-end software engineering and always looking to expand my skillset into different fields of software engineering.</p>
                         <p>When I am not programming, I enjoy reading, gaming and hiking.</p>
                         <h3 style="margin-bottom: 0">Work</h3>
                         <p style="margin-bottom: 0">UCSD Student Affairs and Technology Services Helpdesk</p>
-                        <p style="margin-bottom: .5rem; font-style: italic">June 2015 - Present</p>
+                        <p style="font-style: italic">June 2015 - Present</p>
                     </div>
-                    <div class="one-third column me-skills">
+                    <div class="one-third column" style="text-align: right">
                         <h7>Education</h7>
                         <p>University of California, San Diego</p>
                         <h7>Degree</h7>
@@ -92,7 +81,7 @@
 
             <div id="projects" class="section projects">
                 <div class="row">
-                    <h2>Projects</h2>
+                    <h3>Projects</h3>
                     <p>I did stuff</p>
                 </div>
             </div>
@@ -101,17 +90,17 @@
             
             <div id="contact" class="section contact">
                 <div class="row">
-                    <h2>Need to Contact Me?</h2>
+                    <h3>Need to Contact Me?</h3>
                 </div>
                 <div class="row">
-                    <div class="six columns">
-                        <h4 style="margin-bottom: 0">Send me an email at:</h4>
-                        <h5 style="margin-bottom: 0"><a href="mailto:knlim95@gmail.com"><i class="icon-mail"></i>knlim95@gmail.com</a></h5>
+                    <div class="eight columns">
+                        <h5 style="margin-bottom: 0">Send me an email at</h5>
+                        <p><a href="mailto:knlim95@gmail.com"><i class="icon-mail"></i>knlim95@gmail.com</a></p>
                     </div>
-                    <div class="six columns">
-                        <h4 style="margin-bottom: 0">You can also find me at:</h4>
-                        <h5 style="margin-bottom: 0"><a href="https://www.linkedin.com/in/kevin-lim-93a055122"><i class="icon-linkedin"></i>LinkedIn</a></h5>
-                        <h5 style="margin-bottom: 0"><a href="https://github.com/knlim95"><i class="icon-github"></i>Github</a></h5>
+                    <div class="four columns">
+                        <h5 style="margin-bottom: 0">You can also find me at</h5>
+                        <p style="margin-bottom: 0"><a href="https://www.linkedin.com/in/kevin-lim-93a055122"><i class="icon-linkedin"></i>LinkedIn</a></p>
+                        <p style="margin-bottom: 0"><a href="https://github.com/knlim95"><i class="icon-github"></i>Github</a></p>
                     </div>
                 </div>
             </div>
