Added page loading time

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- Header -->
     <div id="header" class="header">
         <div class="header-image"></div>
         <div class="header-wrapper">
@@ -53,6 +54,8 @@
 
     <div class="page-body">
         <div class="container">
+
+            <!-- About Me -->
             <div id="me" class="section">
                 <div class="row">
                     <div class="two-thirds column" style="text-align: left">
@@ -76,18 +79,18 @@
                     </div>
                 </div>
             </div>
-
             <hr>
 
+            <!-- Projects -->
             <div id="projects" class="section projects">
                 <div class="row">
                     <h3>Projects</h3>
                     <p>I did stuff</p>
                 </div>
             </div>
-
             <hr>
             
+            <!-- Contact Me -->
             <div id="contact" class="section contact">
                 <div class="row">
                     <h3>Need to Contact Me?</h3>
@@ -102,6 +105,16 @@
                         <p style="margin-bottom: 0"><a href="https://www.linkedin.com/in/kevin-lim-93a055122"><i class="icon-linkedin"></i>LinkedIn</a></p>
                         <p style="margin-bottom: 0"><a href="https://github.com/knlim95"><i class="icon-github"></i>Github</a></p>
                     </div>
+                </div>
+            </div>
+
+            <!-- Footer -->
+            <div id="footer" class="row footer">
+                <div class="six columns">
+                    <p class="timer"></p>
+                </div>
+                <div class="six columns" style="text-align: right">
+                    <p>&copy; Kevin Lim</p>
                 </div>
             </div>
         </div
