Added project and modified footer color

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div id="projects" class="section projects">
                 <div class="row">
                     <h3>Projects</h3>
-                    <p>I did stuff</p>
+                    <p><a href="https://github.com/knlim95/CSE170Collaborate.git" target="_blank">squadFeeder</a></p>
                 </div>
             </div>
             <hr>
@@ -97,19 +97,19 @@
                 </div>
                 <div class="row">
                     <div class="eight columns">
-                        <h5 style="margin-bottom: 0">Send me an email at</h5>
+                        <h6 style="margin-bottom: 0">Send me an email at</h6>
                         <p><a href="mailto:knlim95@gmail.com"><i class="icon-mail"></i>knlim95@gmail.com</a></p>
                     </div>
                     <div class="four columns">
-                        <h5 style="margin-bottom: 0">You can also find me at</h5>
-                        <p style="margin-bottom: 0"><a href="https://www.linkedin.com/in/kevin-lim-93a055122"><i class="icon-linkedin"></i>LinkedIn</a></p>
-                        <p style="margin-bottom: 0"><a href="https://github.com/knlim95"><i class="icon-github"></i>Github</a></p>
+                        <h6 style="margin-bottom: 0">You can also find me at</h6>
+                        <p style="margin-bottom: 0"><a href="https://www.linkedin.com/in/kevin-lim-93a055122" target="_blank"><i class="icon-linkedin"></i>LinkedIn</a></p>
+                        <p style="margin-bottom: 0"><a href="https://github.com/knlim95" target="_blank"><i class="icon-github"></i>Github</a></p>
                     </div>
                 </div>
             </div>
 
             <!-- Footer -->
-            <div id="footer" class="row footer">
+            <div class="row footer">
                 <div class="six columns">
                     <p class="timer"></p>
                 </div>
