--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="header-wrapper">
             <div class="header-text">Kevin Lim</div>
             <div class="header-text-2">
-                <p>student and developer</p>
+                <p>hi, i'm a student and developer</p>
             </div>
         </div>
         <div class="header-link">
@@ -59,23 +59,23 @@
             <div id="me" class="section">
                 <div class="row">
                     <div class="two-thirds column" style="text-align: left">
-                        <h3 style="margin-bottom: 0">About Me</h3>
+                        <h3 class="bold">About Me</h3>
                         <p>I am currently studying Computer Engineering at University of California, San Diego.</p>
                         <p>I am extremely interested in front-end software engineering and always looking to expand my skillset into different fields of software engineering.</p>
                         <p>When I am not programming, I enjoy reading, gaming and hiking.</p>
-                        <h3 style="margin-bottom: 0">Work</h3>
-                        <p style="margin-bottom: 0">UCSD Student Affairs and Technology Services Helpdesk</p>
+                        <h4 class="no-bot-margin">Work Experience</h4>
+                        <p class="no-bot-margin">UCSD Student Affairs and Technology Services Helpdesk</p>
                         <p style="font-style: italic">June 2015 - Present</p>
                     </div>
                     <div class="one-third column" style="text-align: right">
-                        <h7>Education</h7>
+                        <h6 class="about-text-desc">Education</h6>
                         <p>University of California, San Diego</p>
-                        <h7>Degree</h7>
+                        <h6 class="about-text-desc">Degree</h6>
                         <p>Computer Engineering, B.S.</p>
-                        <h7>Hometown</h7>
+                        <h6 class="about-text-desc">Hometown</h6>
                         <p>La Mirada, CA</p>
-                        <h7>Experience In</h7>
-                        <p style="margin-bottom: 0;">Java, C, C++<br>HTML, CSS<br>JavaScript, jQuery<br>nodeJS</p>
+                        <h6 class="about-text-desc">Experience In</h6>
+                        <p>Java, C, C++<br>HTML, CSS<br>JavaScript, jQuery<br>nodeJS</p>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
             <!-- Projects -->
             <div id="projects" class="section projects">
                 <div class="row">
-                    <h3>Projects</h3>
+                    <h3 class="bold">Projects</h3>
                     <p><a href="https://github.com/knlim95/CSE170Collaborate.git" target="_blank">squadFeeder</a></p>
                 </div>
             </div>
@@ -93,17 +93,17 @@
             <!-- Contact Me -->
             <div id="contact" class="section contact">
                 <div class="row">
-                    <h3>Need to Contact Me?</h3>
+                    <h3 class="bold">Need to Contact Me?</h3>
                 </div>
                 <div class="row">
                     <div class="eight columns">
-                        <h6 style="margin-bottom: 0">Send me an email at</h6>
+                        <h6 class="no-bot-margin">Send me an email at</h6>
                         <p><a href="mailto:knlim95@gmail.com"><i class="icon-mail"></i>knlim95@gmail.com</a></p>
                     </div>
                     <div class="four columns">
-                        <h6 style="margin-bottom: 0">You can also find me at</h6>
-                        <p style="margin-bottom: 0"><a href="https://www.linkedin.com/in/kevin-lim-93a055122" target="_blank"><i class="icon-linkedin"></i>LinkedIn</a></p>
-                        <p style="margin-bottom: 0"><a href="https://github.com/knlim95" target="_blank"><i class="icon-github"></i>Github</a></p>
+                        <h6 class="no-bot-margin">You can also find me at</h6>
+                        <p class="no-bot-margin"><a href="https://www.linkedin.com/in/kevin-lim-93a055122" target="_blank"><i class="icon-linkedin"></i>LinkedIn</a></p>
+                        <p class="no-bot-margin"><a href="https://github.com/knlim95" target="_blank"><i class="icon-github"></i>Github</a></p>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     <p class="timer"></p>
                 </div>
                 <div class="six columns" style="text-align: right">
-                    <p>&copy; Kevin Lim</p>
+                    <p>&copy; 2016 Kevin Lim. All rights reserved.</p>
                 </div>
             </div>
         </div
