Fixed Error and Added Additional Info/Projects

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <h6 class="about-text-desc">Hometown</h6>
                         <p>La Mirada, CA</p>
                         <h6 class="about-text-desc">Experience In</h6>
-                        <p>Java, C, C++<br>HTML, CSS<br>JavaScript, jQuery<br>nodeJS</p>
+                        <p>Java, C, C++, Python<br>HTML, CSS<br>JavaScript, jQuery, AJAX<br>Node.js, Express, Ruby on Rails<br>Android App Development</p>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,18 @@
             <div id="projects" class="section projects">
                 <div class="row">
                     <h3 class="bold">Projects</h3>
-                    <p><a href="https://github.com/knlim95/CSE170Collaborate.git" target="_blank">squadFeeder</a></p>
+                </div>
+                <div class="row">
+                    <div class="one-half column">
+                        <div class="projects-box">
+                            <p><a href="https://github.com/knlim95/CSE170Collaborate.git" target="_blank">squadFeeder</a></p>
+                        </div>
+                    </div>
+                    <div class="one-half column">
+                        <div class="projects-box">
+                            <p><a href="https://github.com/knlim95/TritonBudget" target="_blank">TritonBudget</a></p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <hr>
@@ -103,7 +114,7 @@
                     <div class="four columns">
                         <h6 class="no-bot-margin">You can also find me at</h6>
                         <p class="no-bot-margin"><a href="https://www.linkedin.com/in/kevin-lim-93a055122" target="_blank"><i class="icon-linkedin"></i>LinkedIn</a></p>
-                        <p class="no-bot-margin"><a href="https://github.com/knlim95" target="_blank"><i class="icon-github"></i>Github</a></p>
+                        <p class="no-bot-margin"><a href="https://github.com/knlim95" target="_blank"><i class="icon-github"></i>GitHub</a></p>
                     </div>
                 </div>
             </div>
@@ -117,7 +128,7 @@
                     <p>&copy; 2016 Kevin Lim. All rights reserved.</p>
                 </div>
             </div>
-        </div
+        </div>
     </div>
 
     <!-- Scripts
