Changed CNAME + Placeholder Images

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
             <!-- About Me -->
             <div id="me" class="section">
-                <div class="row">
+                <div class="row" style="padding-top: 2rem">
                     <div class="two-thirds column" style="text-align: left">
                         <h3 class="bold">About Me</h3>
                         <p>I am currently studying Computer Engineering at University of California, San Diego.</p>
-                        <p>I am extremely interested in front-end software engineering and always looking to expand my skillset into different fields of software engineering.</p>
+                        <p>I am extremely interested in full-stack software engineering and always looking to expand my skillset into different fields of software engineering.</p>
                         <p>When I am not programming, I enjoy reading, gaming and hiking.</p>
                         <h4 class="no-bot-margin">Work Experience</h4>
                         <p class="no-bot-margin">UCSD Student Affairs and Technology Services Helpdesk</p>
@@ -75,7 +75,7 @@
                         <h6 class="about-text-desc">Hometown</h6>
                         <p>La Mirada, CA</p>
                         <h6 class="about-text-desc">Experience In</h6>
-                        <p>Java, C, C++, Python<br>HTML, CSS<br>JavaScript, jQuery, AJAX<br>Node.js, Express, Ruby on Rails<br>Android App Development</p>
+                        <p>Java, C, C++, Python<br>HTML, CSS<br>JavaScript, jQuery, AJAX<br>Node.js, Express<br>Ruby on Rails, Django<br>Android App Development</p>
                     </div>
                 </div>
             </div>
@@ -88,13 +88,15 @@
                 </div>
                 <div class="row">
                     <div class="one-half column">
-                        <div class="projects-box">
-                            <p><a href="https://github.com/knlim95/CSE170Collaborate.git" target="_blank">squadFeeder</a></p>
+                        <div class="projects-card">
+                            <img src="images/temp-background.jpg" alt="TritonBudget" class="projects-img">
+                            <p class="projects-text"><a href="https://github.com/knlim95/TritonBudget" target="_blank">TritonBudget</a></p>
                         </div>
                     </div>
                     <div class="one-half column">
-                        <div class="projects-box">
-                            <p><a href="https://github.com/knlim95/TritonBudget" target="_blank">TritonBudget</a></p>
+                        <div class="projects-card">
+                            <img src="images/temp-background.jpg" alt="squadFeeder" class="projects-img">
+                            <p class="projects-text"><a href="https://github.com/knlim95/CSE170Collaborate.git" target="_blank">squadFeeder</a></p>
                         </div>
                     </div>
                 </div>
